--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -6,12 +6,14 @@
     <dimen name="_0.25dp">0.25dp</dimen>
     <dimen name="_0.5dp">0.5dp</dimen>
     <dimen name="_1dp">1dp</dimen>
+    <dimen name="_2dp">2dp</dimen>
     <dimen name="_4dp">4dp</dimen>
     <dimen name="_5dp">5dp</dimen>
     <dimen name="_8dp">8dp</dimen>
     <dimen name="_10dp">10dp</dimen>
     <dimen name="_15dp">15dp</dimen>
     <dimen name="_16dp">16dp</dimen>
+    <dimen name="_18dp">18dp</dimen>
     <dimen name="_20dp">20dp</dimen>
     <dimen name="_25dp">25dp</dimen>
     <dimen name="_30dp">30dp</dimen>
@@ -20,11 +22,14 @@
     <dimen name="_45dp">45dp</dimen>
     <dimen name="_48dp">48dp</dimen>
     <dimen name="_50dp">50dp</dimen>
+    <dimen name="_56dp">56dp</dimen>
     <dimen name="_60dp">60dp</dimen>
     <dimen name="_72dp">72dp</dimen>
     <dimen name="_80dp">80dp</dimen>
     <dimen name="_90dp">90dp</dimen>
     <dimen name="_100dp">100dp</dimen>
+    <dimen name="_120dp">120dp</dimen>
+    <dimen name="_130dp">130dp</dimen>
     <dimen name="_180dp">180dp</dimen>
     <dimen name="_200dp">200dp</dimen>
     <dimen name="_250dp">250dp</dimen>
