--- a/app/src/main/res/layout/task_item_layout.xml
+++ b/app/src/main/res/layout/task_item_layout.xml
@@ -56,7 +56,7 @@
         android:src="@drawable/btn_edit" />
 
     <TextView
-        android:id="@+id/text_status"
+        android:id="@+id/text_priority"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/_8dp"
