--- a/app/src/main/res/drawable/btn_back.xml
+++ b/app/src/main/res/drawable/btn_back.xml
@@ -4,11 +4,11 @@
 
     <item
         android:state_pressed="true"
-        android:drawable="@drawable/pre_btn_back_off" />
+        android:drawable="@drawable/btn_back_on" />
     <item
         android:state_focused="true"
-        android:drawable="@drawable/pre_btn_back_off" />
+        android:drawable="@drawable/btn_back_on" />
     <item
-        android:drawable="@drawable/pre_btn_back_on" />
+        android:drawable="@drawable/btn_back_off" />
 
 </selector>
