--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="color_Status_Resolved">#00BFA5</color>
     <color name="color_Status_Closed">#424242</color>
     <color name="color_date">#4276d9</color>
+    <color name="color_text">#000000</color>
+    <color name="color_background">#ffffff</color>
 </resources>
