--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -24,6 +24,10 @@
     <dimen name="_50dp">50dp</dimen>
     <dimen name="_56dp">56dp</dimen>
     <dimen name="_60dp">60dp</dimen>
+    <dimen name="_68dp">68dp</dimen>
+    <dimen name="_69dp">69dp</dimen>
+    <dimen name="_70dp">70dp</dimen>
+    <dimen name="_71dp">71dp</dimen>
     <dimen name="_72dp">72dp</dimen>
     <dimen name="_80dp">80dp</dimen>
     <dimen name="_90dp">90dp</dimen>
@@ -34,5 +38,19 @@
     <dimen name="_200dp">200dp</dimen>
     <dimen name="_250dp">250dp</dimen>
     <dimen name="_350dp">350dp</dimen>
+
+    <!--TextSize-->
+    <dimen name="_10sp">10sp</dimen>
+    <dimen name="_15sp">15sp</dimen>
+    <dimen name="_16sp">16sp</dimen>
+    <dimen name="_18sp">18sp</dimen>
+    <dimen name="_20sp">20sp</dimen>
+    <dimen name="_25sp">25sp</dimen>
+    <dimen name="_30sp">30sp</dimen>
+    <dimen name="_35sp">35sp</dimen>
+    <dimen name="_40sp">40sp</dimen>
+    <dimen name="_45sp">45sp</dimen>
+    <dimen name="_48sp">48sp</dimen>
+    <dimen name="_50sp">50sp</dimen>
 
 </resources>
