--- a/app/src/main/res/layout/task_item_layout.xml
+++ b/app/src/main/res/layout/task_item_layout.xml
@@ -15,8 +15,10 @@
         android:maxLines="1"
         android:paddingRight="@dimen/_10dp"
         android:ellipsize="end"
+        android:gravity="top"
         android:text="@string/writing_testplan"
         android:textColor="@color/color_text"
+        android:textSize="@dimen/_18sp"
         android:textStyle="bold" />
 
     <TextView
@@ -25,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_title"
         android:text="@string/startdate"
+        android:textSize="@dimen/_14sp"
         android:textColor="@color/color_date" />
 
     <TextView
@@ -34,6 +37,7 @@
         android:layout_below="@+id/text_title"
         android:layout_toRightOf="@+id/text_start_date"
         android:text="@string/duedate"
+        android:textSize="@dimen/_14sp"
         android:textColor="@color/color_date" />
 
     <FrameLayout
