--- a/app/src/main/res/layout/task_item_layout.xml
+++ b/app/src/main/res/layout/task_item_layout.xml
@@ -10,12 +10,12 @@
         android:id="@+id/text_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/text_priority"
         android:layout_alignParentLeft="true"
-        android:maxLines="1"
-        android:paddingRight="@dimen/_10dp"
+        android:layout_toLeftOf="@+id/text_priority"
         android:ellipsize="end"
         android:gravity="top"
+        android:paddingRight="@dimen/_5dp"
+        android:singleLine="true"
         android:text="@string/writing_testplan"
         android:textColor="@color/color_text"
         android:textSize="@dimen/_18sp"
@@ -26,19 +26,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_title"
+        android:layout_marginTop="@dimen/_8dp"
         android:text="@string/startdate"
-        android:textSize="@dimen/_14sp"
-        android:textColor="@color/color_date" />
+        android:textColor="@color/color_date"
+        android:textSize="@dimen/_14sp" />
 
     <TextView
         android:id="@+id/text_due_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_title"
+        android:layout_marginTop="@dimen/_8dp"
         android:layout_toRightOf="@+id/text_start_date"
         android:text="@string/duedate"
-        android:textSize="@dimen/_14sp"
-        android:textColor="@color/color_date" />
+        android:textColor="@color/color_date"
+        android:textSize="@dimen/_14sp" />
 
     <FrameLayout
         android:id="@+id/frame_priorities"
@@ -69,11 +71,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/_8dp"
+        android:layout_marginTop="@dimen/_4dp"
         android:layout_toLeftOf="@id/image_edit"
-        android:paddingLeft="@dimen/_10dp"
         android:text="@string/status"
-        android:textSize="@dimen/_10dp"
         android:textColor="@color/color_text"
+        android:textSize="@dimen/_10dp"
         android:textStyle="italic" />
 
 
