--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -4,10 +4,64 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_background">
+    <LinearLayout
+        android:id="@+id/layout_add_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:weightSum="1">
+
+        <LinearLayout
+            android:layout_width="@dimen/_0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.98"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/image_view_return"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:src="@drawable/btn_back" />
+
+            <TextView
+                android:id="@+id/text_view_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/image_view_back"
+                android:ellipsize="start"
+                android:singleLine="true"
+                android:text="@string/writing_testplan"
+                android:textColor="@color/color_text"
+                android:textSize="@dimen/_20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/text_view_done"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/_8dp"
+            android:layout_weight="0.02"
+            android:paddingLeft="@dimen/_10dp"
+            android:text="@string/done"
+            android:textColor="@color/color_done"
+            android:textSize="@dimen/_20sp"
+            android:textStyle="normal"
+            android:visibility="gone" />
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/layout_divider"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_0.5dp"
+        android:layout_below="@+id/layout_add_header"
+        android:background="@color/colorPrimary" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/layout_add_header"
         android:layout_above="@+id/divider_below_add_task">
 
         <RelativeLayout
@@ -15,68 +69,10 @@
             android:layout_height="match_parent"
             android:focusable="true"
             android:focusableInTouchMode="true">
-
-            <LinearLayout
-                android:id="@+id/layout_add_header"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:weightSum="1">
-
-                <LinearLayout
-                    android:layout_width="@dimen/_0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.98"
-                    android:gravity="center_vertical">
-
-                    <ImageView
-                        android:id="@+id/image_view_back"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:clickable="true"
-                        android:src="@drawable/btn_back" />
-
-                    <TextView
-                        android:id="@+id/text_view_header"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_toRightOf="@+id/image_view_back"
-                        android:ellipsize="start"
-                        android:singleLine="true"
-                        android:text="@string/writing_testplan"
-                        android:textColor="@color/color_text"
-                        android:textSize="@dimen/_20sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/text_view_done"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/_8dp"
-                    android:layout_weight="0.02"
-                    android:paddingLeft="@dimen/_10dp"
-                    android:text="@string/done"
-                    android:textColor="@color/color_done"
-                    android:textSize="@dimen/_20sp"
-                    android:textStyle="normal"
-                    android:visibility="gone" />
-            </LinearLayout>
-
-            <RelativeLayout
-                android:id="@+id/layout_divider"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_0.5dp"
-                android:layout_below="@+id/layout_add_header"
-                android:background="@color/colorPrimary" />
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/layout_divider"
                 android:padding="@dimen/_8dp">
-
-
                 <LinearLayout
                     android:id="@+id/layout_title"
                     android:layout_width="match_parent"
@@ -330,37 +326,26 @@
                         android:textStyle="italic" />
                 </FrameLayout>
 
-                <EditText
-                    android:id="@+id/edit_text_estimate"
-                    android:layout_width="@dimen/_72dp"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/frame_due_date"
-                    android:layout_marginTop="@dimen/_20dp"
-                    android:layout_toRightOf="@+id/frame_estimate"
-                    android:background="@drawable/edt_box_title"
-                    android:gravity="center"
-                    android:inputType="numberDecimal"
-                    android:paddingLeft="@dimen/_5dp"
-                    android:paddingRight="@dimen/_5dp" />
-
                 <TextView
-                    android:id="@+id/text_view_hours"
+                    android:id="@+id/text_view_estimate_add"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/frame_due_date"
-                    android:layout_marginLeft="@dimen/_8dp"
                     android:layout_marginTop="@dimen/_25dp"
-                    android:layout_toRightOf="@+id/edit_text_estimate"
-                    android:text="@string/hours_add"
+                    android:layout_marginLeft="@dimen/_8dp"
+                    android:layout_toRightOf="@+id/frame_estimate"
+                    android:gravity="center"
                     android:textColor="@color/color_text"
-                    android:textSize="@dimen/_15sp" />
+                    android:textSize="@dimen/_15sp"
+                    />
+
 
                 <LinearLayout
                     android:id="@+id/layout_text_warning"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/edit_text_estimate"
-                    android:layout_marginTop="@dimen/_16dp"
+                    android:layout_below="@+id/text_view_estimate_add"
+                    android:layout_marginTop="@dimen/_10dp"
                     android:gravity="center">
 
                     <TextView
@@ -376,7 +361,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/layout_text_warning"
                     android:layout_marginLeft="@dimen/_8dp"
-                    android:layout_marginTop="@dimen/_30dp">
+                    android:layout_marginTop="@dimen/_25dp">
 
                     <TextView
                         android:id="@+id/text_view_status"
@@ -393,7 +378,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/layout_text_warning"
-                    android:layout_marginTop="@dimen/_25dp"
+                    android:layout_marginTop="@dimen/_20dp"
                     android:layout_toRightOf="@+id/frame_status"
                     android:background="@drawable/edt_box_title">
 
@@ -421,4 +406,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" />
+
+    <FrameLayout
+        android:id="@+id/frame_time"
+        android:layout_width="@dimen/_100dp"
+        android:layout_height="@dimen/_100dp"
+        android:background="@color/color_list_item"
+        android:visibility="gone"
+        android:layout_centerInParent="true">
+        <TextView
+            android:id="@+id/text_view_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="@dimen/_30dp"
+            android:textColor="@color/color_Priorities_Immediate"
+            android:text="10:30"/>
+    </FrameLayout>
 </RelativeLayout>
