--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -411,7 +411,7 @@
         android:id="@+id/frame_time"
         android:layout_width="@dimen/_100dp"
         android:layout_height="@dimen/_100dp"
-        android:background="@color/color_list_item"
+        android:background="@drawable/border_frame"
         android:visibility="gone"
         android:layout_centerInParent="true">
         <TextView
