--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="color_done">#33B5E5</color>
     <color name="color_background">#ffffff</color>
     <color name="color_list_item">#cfd8dc</color>
+    <color name="color_bar_tracker">#FFF200</color>
 </resources>
